pic32c-source/XC32-arm-gcc/gcc/gcc/testsuite/gcc.target/pic32c/opt-msmart-io-1.c
/* { dg-do compile */
/* { dg-options "-msmart-io -msmart-io=0" } */
/* { dg-error "msmart-io" "" { target *-*-* } 0 } */
